mobile view css update. Updated the Contact Me form to prevent horizontal scrolling and input fields to be bigger than the canvas

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     padding: 0;
     
     /*testing*/
-    border: dotted;
+    border: none;
 }
 
 .app {
@@ -272,6 +272,19 @@
     padding: 1rem;
     margin: 0 15%;
     border-radius: 20px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+.form-input {
+    padding: 1rem 1rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 label {
@@ -280,9 +293,15 @@ label {
 
 .all-input {
     height: 25px;
-    width: 250px;
-    max-width: 300px;
-    min-width: 10px;
+    width: 80%;
+    border: 1px solid #000;
+    padding: 5px;
+    letter-spacing: 1px;
+}
+
+textarea {
+    max-width: 100%;
+    padding: 5px;
 }
 
 #message {
@@ -292,12 +311,7 @@ label {
 
 /* Helper */
 
-.form-input {
-    padding: 1rem 0rem;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-}
+
 
 
 
